<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/answers_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

        <TextView
            android:id="@+id/textViewQuestionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="title"
            android:textColor="#000000"
            android:background="@color/colorAccent"/>
            <!--android:textStyle="bold"-->

    <!--android:maxLines="2"-->



    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/questionBodyScrollView"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/textViewQuestionBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="body" />
        <!--android:maxLines="3"-->
    </ScrollView>

    <TextView
            android:id="@+id/textViewQuestionLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="link"
            android:textColor="#0800ff" />

        <TextView
            android:id="@+id/textViewAnswersHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="answers:"
            android:background="@color/colorAccent"
            android:textColor="#FFFFFF"
            android:gravity="center" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/recycler_bg1"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/answers_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/recycler_bg"
            android:paddingBottom="@dimen/recycler_inner_margin"
            android:paddingLeft="@dimen/recycler_inner_margin"
            android:paddingRight="@dimen/recycler_inner_margin"
            android:paddingTop="@dimen/recycler_inner_margin"
            android:scrollbars="vertical" />


        <ProgressBar
            android:id="@+id/answersProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="No answers"
            android:visibility="gone"
            android:id="@+id/textView0answers" />


    </RelativeLayout>


</LinearLayout>