...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="New Text"
                android:textColor="@android:color/black" />
            <!--android:layout_gravity="center_horizontal"-->
...
                    android:text="New Text"
                    android:singleLine="true"
                    android:background="@color/link_background"
                    android:textColor="@color/link_color" />

                <TextView
                    android:id="@+id/textViewAnswers"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Answers:"
                    android:background="@color/answer_background"
...
