<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:id="@+id/swiperefresh"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/questions_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/recycler_bg"
                android:paddingBottom="@dimen/recycler_inner_margin"
                android:paddingLeft="@dimen/recycler_inner_margin"
                android:paddingRight="@dimen/recycler_inner_margin"
                android:paddingTop="@dimen/recycler_inner_margin"

                android:scrollbars="vertical"
                android:visibility="gone" />
        <!--</android.support.v4.widget.SwipeRefreshLayout>-->

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/no_data_available"
            android:visibility="visible" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/arrowImageView"
            android:src="@drawable/arrow2"
            android:layout_marginRight="20dp"
            android:alpha="0"
            android:scaleType="fitXY"
            android:layout_toRightOf="@id/emptyTextView"
            android:layout_above="@id/emptyTextView"/>

    </RelativeLayout>
